--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,14 @@ uuid = "e605bf93-8635-45bb-8c5e-55d06ea77399"
 authors = ["James Usevitch <jamesusevitch@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+Functors = "d9f16b24-f501-4c13-a1f2-28368ffc5196"
+GraphNeuralNetworks = "cffab07f-9bc2-4db1-8861-388f63bf7694"
+NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
+
 [compat]
 julia = "1"
 
